# bond

./: CHANGELOG.md  CMakeLists.txt
cmake/: Config.cmake
cpp/inc/bond/comm/: services.h
cpp/inc/bond/core/: apply.h  config.h  parser.h  reflection.h  stl_containers.h  traits.h  transforms.h  tuple.h  value.h
cpp/inc/bond/core/detail/: any.h  debug.h  inheritance.h  metadata.h  mpl.h  parser_utils.h  tuple_fields.h  typeid_value.h  visit_any.h
cpp/inc/bond/protocol/: encoding.h  protobuf_binary_reader.h  protobuf_field_validator.h  protobuf_parser.h
cpp/inc/bond/protocol/detail/: protobuf_field_enumerator.h  (+3 more)
cpp/inc/bond/stream/: input_buffer.h
cpp/test/compat/core/: compare.h
cpp/test/core/: CMakeLists.txt  append_to.h  equal.h  merge_test.cpp  metadata_tests.cpp  moved.h  multi_index.h  pass_through.cpp  protobuf_reader_format_test.cpp  protobuf_reader_test.cpp  protobuf_reader_test_utils.h  protobuf_reader_unsupported_types_test.cpp  protobuf_reader_var_type_mismatch_test.cpp  protobuf_reader_wire_type_match_test.cpp  protobuf_writer.bond  protobuf_writer.proto  protobuf_writer_test.cpp  serialization_test.cpp  to_proto.h  unit_test_util.h
examples/: CMakeLists.txt
examples/cpp/core/move_semantics/: move_semantics.cpp
examples/cpp/core/polymorphic_container_visitor/: polymorphic_visitor.h
examples/cpp/grpc/: CMakeLists.txt
examples/cpp/grpc/perf/: CMakeLists.txt  main.cpp  perf.bond  perf.h  perf.proto
python/inc/bond/python/: struct.h
tools/protoc-plugin/: CMakeLists.txt  example.proto  main.cpp
tools/protoc-plugin/folder/: other.proto
(+4 files in other folders)
